# tla-dataset-pipeline

./: .gitignore  CITATION.cff  LICENSE  README.md  dvc.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  nightly_discovery.yaml  nightly_parse.yaml
data_contracts/schemas/: source_record.schema.json
manifests/sources/: sources_latest_formatted.jsonl
src/tladata/: __init__.py  cli.py  cli_handler.py  config.py  logging.py
src/tladata/contracts/: __init__.py  manifest_validator.py  types.py
src/tladata/discovery/: __init__.py  base_service.py  github_client.py  github_search.py  manifest.py  pipeline.py
src/tladata/extraction/: extraction_manifest.py  file_extraction_handler.py  file_extractor.py  s3_upload_handler.py  s3_uploader.py  tla_transform_service.py
src/tladata/parsing/: __init__.py  orchestrator.py  parsing_handler.py  pipeline.py  prompt_loader.py  providers.py  result_writer.py
src/tladata/prompts/: prompt1.md  prompt2.md  prompt3.md
src/tladata/transform/: __init__.py  json.py
src/tladata/utils/: load_limits.py  load_seeds.py
tests/: conftest.py  test_cli.py  test_config.py  test_github_client.py  test_handlers.py  test_parsing.py
